--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,13 @@ dependencies:
   dots_indicator: ^2.1.0
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.18.0
+  firebase_auth: ^3.3.20
+
 
 dev_dependencies:
   flutter_test:
