--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.18.0
   firebase_auth: ^3.3.20
-
+  cloud_firestore: ^3.1.18
 
 dev_dependencies:
   flutter_test:
